Code from todays lesson

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+
+    <h1>Inloggning</h1>
+    <ul id="userList"></ul>
+    
+    <div>
+        <input type="text" id="newUser">
+        <button id="saveUserBtn">Spara</button>
+    </div>
     
 </body>
 </html>
